fix squished play button on mobile, attempt to fix pausing issue on Android

--- a/css/main.scss
+++ b/css/main.scss
@@ -683,7 +683,7 @@ h4 {
         padding-left: 0;
       }
 
-      img {
+      .sidebar-img {
         width: 100%;
       }
 
@@ -728,6 +728,18 @@ h4 {
   &:hover {
     background: transparent !important;
   }
+  &:not(.plyr__control--overlaid) {
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    background-color: var(--yellow);
+    opacity: 0.8;
+    border-radius: 5px;
+    z-index: 100;
+  }
+  .plyr__tooltip {
+    display: none;
+  }
 }
 .plyr__control--overlaid {
   background-color: transparent;
@@ -739,5 +751,10 @@ h4 {
       width: 200px;
       height: 200px;
     }
+  }
+}
+.plyr--paused {
+  .plyr__control:not(.plyr__control--overlaid) {
+    display: none;
   }
 }
